Fix overflow on panel-body

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,10 @@ h4 > .fa {
   padding-left: 0.5rem;
 }
 
+.panel.package > .panel-body {
+  overflow: hidden;
+}
+
 .panel.package > .panel-body > .stargazers {
   padding-left: 0.5rem;
 }
